--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         
         <div class="love-message">
-            <h2>Eu te amo bb</h2>
+            <h2>Eu te amo bibi</h2>
         </div>
     </div>
 
