--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <div class="love-message">
             <h2>Eu te amo bb</h2>
         </div>
+
+         <div>
+        <audio autoplay src="Frank Ocean - Pink + White.mp3" ></audio>
+    </div>
     </div>
 
     
