--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
          <div>
-        <audio autoplay src="Frank Ocean - Pink + White.mp3" ></audio>
+        <audio autoplay muted src="Frank Ocean - Pink + White.mp3" ></audio>
     </div>
     </div>
 
