--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         </div>
 
          <div>
-        <audio autoplay muted src="Frank Ocean - Pink + White.mp3" ></audio>
+        <audio controls autoplay>
+  <source src="Frank Ocean - Pink + White.mp3" type="audio/mpeg">
+ 
+</audio>
+
     </div>
     </div>
 
