--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <div class="love-message">
             <h2>Eu te amo bb</h2>
         </div>
+
+        <audio id="background-music" src="Frank Ocean - Pink + White.mp3" autoplay></audio>
     </div>
 
     
