--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <h2>Eu te amo bb</h2>
         </div>
 
-        <audio id="background-music" src="Frank Ocean - Pink + White.mp3" autoplay></audio>
+        <div class="spotify-box">
+            <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/3xKsf9qdS1CyvXSMEid6g8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
     </div>
 
     
